--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
 	<title>Robinson R-22 Fan Page</title>
 	<meta charset="utf-8"/>
+	<link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-
+	<div id="header">
 	<h1>Robinson R22</h1>
+	</div>
+		<div id="caption">
+		<p>Whether you are just a helicopter enthusiast, or a serious pilot, you can really get behind the Robinson R-22!</p>
+		</div>
 		<nav id="top">
-		<ul>
-			<li><a href="#train">The Perfect Trainer</a></li>
-			<li><a href="#fun">Fun to Fly</a></li>
-			<li><a href="#affordable">Affordable Cost</a></li>
+		<ul id="nav">
+			<li><a href="#gallery">Image Gallery</a></li>
+			<li><a href="#fun">Placeholder</a></li>
+			<li><a href="http://www.robinsonheli.com">Buy an R22</a></li>
 		</ul>
 		</nav>
-			
-		<img src="images/r22.jpg" alt="Flying R-22 Helicopter"/>
-		<p>Whether you are just a helicopter enthusiast, or a serious pilot, you can really get behind the Robinson R-22!</p>
-		
-	<section>
-	<h2><a id="train">The Perfect Trainer</a></h2>
 	
-	<h4><a href="#top">Back to top</a></h4>
+	<section id="trainer">
+	<h2>The Perfect Trainer</h2>
 
 		<p>The Robinson R-22 in my opinion is the perfect helicopter to train for your helicopter pilot's license in.  Although it seems very small, only seating two people, there is ample room to move around for an <em>average</em> sized person.  I emphasize <em>average</em> because it is a small aircraft and has weight limits.  For those students who find they are a bit more robust and exceed the seat weight limits, I would recommend looking at training in a Robinson R-44.</p>
 			
@@ -36,18 +36,34 @@
 		</ol>
 	</section>
 	
-	<h2><a id="fun">Fun To Fly</a></h2>
-	<h4><a href="#top">Back to top</a></h4>
+	<section id="fun">
+	<h2>Fun To Fly</h2>
+
 		<p>If you are reading this page then you are most likely an aviation enthusiast at least.  You already long for the wind in your hair and soaring with the birds in the <span>light blue</span> sky.  Helicopters in general will give you this joy, but the R-22 will help you get even closer.</p>
 		
 		<p>Because they are so small they allow you to go to places larger aircraft can't.  The lightweight nature of the aircraft will allow you to land with a lighter footprint.  This makes the possibilities of where you can take the aircraft nearly endless, because let's face it, you're flying a helicopter!  Hover in one spot, land and take off from a standstill, move backwards if you've gone too far -- whatever you want!</p>
-	<h2><a id= "affordable">Affordable Cost</a></h2>
-	<h4><a href="#top">Back to top</a></h4>
+	</section>
+	
+	<section id="affordable">
+	<h2>Affordable Cost</h2>
+
 		<p>Let's face it, all aircraft are expensive.  However, if you're in the market to buy one, then you will definitely be looking at the price tag, searching for the best deal you can find.</p>
 		
-		<p>The best deal out there by far is the R-22.  At a modest $250,000 brand new, you can be on your way in no time.  You can order one from the Robinson Factory in Torrence, California.  You can check out their website and order one right <a href="http://www.robinsonheli.com"><strong>HERE.</strong></a></p>
+		<p>The best deal out there by far is the R-22.  At a modest $250,000 brand new, you can be on your way in no time.  You can order one from the Robinson Factory in Torrence, California.  You can check out their website and order one by clicking the button below.</p>
 		
-<footer><p>Thanks for stopping by! &copy; 2012 R22 Pilot R. Kaikala. All rights reserved.</p></footer>
+		<p class="button blue"><a href="http://www.robinsonheli.com"><strong>Robinson Helicopters</strong></a></p>
+	</section>
+	
+		<ul id="gallery">
+		<h2>Image Gallery</h2>
+			<li class="gallery1"><img id="1" src="images/flying_r22.jpg" width="260" height="166.5" alt="R22 with the doors off, making a turn." /></li>
+			<li class="gallery4"><img id="2" src="images/cockpit.jpg" width="260" height="166.5" alt="R22 cockpit, close up." /></li>
+			<li class="gallery2"><img id="3" src="images/white_r22.jpg" width="260" height="166.5" alt="A white R22" /></li>
+			<li class="gallery3"><img id="4" src="images/yellow_r22.gif" width="260" height="166.5" alt="A yellow R22" /></li>
+		</ul>
+		
+<section id="footer"><p>Thanks for stopping by! &copy; 2012 R22 Pilot R. Kaikala. All rights reserved.</p>
+</section>
 
 </body>
 </html>
