Made correction to navigation found during review.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<nav id="top">
 		<ul id="nav">
 			<li><a href="#gallery">Image Gallery</a></li>
-			<li><a href="#fun">Placeholder</a></li>
+			<li><a href="#footer">Author</a></li>
 			<li><a href="http://www.robinsonheli.com">Buy an R22</a></li>
 		</ul>
 		</nav>
