Update for Week 3 assignments.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
 	<title>Robinson R-22 Fan Page</title>
 	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 
+<div id="wrapper">
 <body>
 	<div id="header">
 	<h1>Robinson R22</h1>
@@ -20,7 +22,7 @@
 			<li><a href="http://www.robinsonheli.com">Buy an R22</a></li>
 		</ul>
 		</nav>
-	
+	<div id=bordered_content>
 	<section id="trainer">
 	<h2>The Perfect Trainer</h2>
 
@@ -51,19 +53,21 @@
 		
 		<p>The best deal out there by far is the R-22.  At a modest $250,000 brand new, you can be on your way in no time.  You can order one from the Robinson Factory in Torrence, California.  You can check out their website and order one by clicking the button below.</p>
 		
-		<p class="button blue"><a href="http://www.robinsonheli.com"><strong>Robinson Helicopters</strong></a></p>
+		<div id="button"><p class="button blue"><a href="http://www.robinsonheli.com"><strong>Robinson Helicopters</strong></a></p></div>
 	</section>
+	</div>
 	
 		<ul id="gallery">
 		<h2>Image Gallery</h2>
-			<li class="gallery1"><img id="1" src="images/flying_r22.jpg" width="260" height="166.5" alt="R22 with the doors off, making a turn." /></li>
-			<li class="gallery4"><img id="2" src="images/cockpit.jpg" width="260" height="166.5" alt="R22 cockpit, close up." /></li>
-			<li class="gallery2"><img id="3" src="images/white_r22.jpg" width="260" height="166.5" alt="A white R22" /></li>
-			<li class="gallery3"><img id="4" src="images/yellow_r22.gif" width="260" height="166.5" alt="A yellow R22" /></li>
+			<li class="gallery1"><div id="img_1"><img id="1" src="images/flying_r22.png" alt="R22 with the doors off, making a turn." /></div></li>
+			<li class="gallery4"><div id="img_2"><img id="2" src="images/cockpit.png" alt="R22 cockpit, close up." /></div></li>
+			<li class="gallery2"><div id="img_3"><img id="3" src="images/white_r22.png" alt="A white R22" /></div></li>
+			<li class="gallery3"><div id="img_4"><img id="4" src="images/yellow_r22.png" alt="A yellow R22" /></div></li>
 		</ul>
 		
 <section id="footer"><p>Thanks for stopping by! &copy; 2012 R22 Pilot R. Kaikala. All rights reserved.</p>
 </section>
 
 </body>
+</div>
 </html>
